--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore vendored gems
+/vendor/*
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+*~
